--- a/ServiceDiscovery/ServiceDiscovery.csproj
+++ b/ServiceDiscovery/ServiceDiscovery.csproj
@@ -1,15 +1,18 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
+    <ImplicitUsings>disable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.OpenApi.Readers" Version="1.2.3" />
+    <!--<PackageReference Include="Microsoft.OpenApi.Readers" Version="1.2.3" />-->
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    
+    <PackageReference Include="NSwag.CodeGeneration.CSharp" Version="13.16.1" />
+    
   </ItemGroup>
 
 </Project>
